scroll margin fix on mobile

--- a/styles.css
+++ b/styles.css
@@ -23,11 +23,11 @@ body {
 }
 
 #skills {
-    scroll-margin-top: 80px;
+    scroll-margin-top: 95px;
 }
 
 #work {
-    scroll-margin-top: 80px;
+    scroll-margin-top: 95px;
 }
 
 .home {
@@ -170,7 +170,7 @@ header {
             font-size: 25px;
         }
         .description {
-            font-size: 17px;
+            font-size: 21px;
             max-width: 600px;
         }
         a {
